<resources>
    <string name="app_name">Neko Mobile</string>
    <string name="datenaustausch_mit_dropbox">Datenaustausch mit Dropbox</string>
    <string name="routen_oeffnen">Routen öffnen</string>
    <string name="dateien_archivieren">Dateien archivieren</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">eneko GmbH</string>
    <string name="nav_header_subtitle">info@e-neko.de</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Einstellungen</string>
    <string name="LongDateTimeFormat">dd.MM.yyyy:hh.mm</string>
    <string name="DateFormat">dd.MM.yyyy</string>
    <string name="empty" />
    <string name="rwm_detail_lb_model">Rauchmeldermodel</string>
    <string name="rwm_detail_txmodel_hint">Bitte ein Rauchmeldermodel auswählen</string>
    <string name="rwm_detail_lb_nummer">Nummer</string>
    <string name="rwm_detail_txnummer_hint">Bitte eine Nummer angeben</string>
    <string name="rwm_detail_lb_raum">Raum</string>
    <string name="rwm_detail_txRaum_hint">Bitte einen Raum angeben</string>
    <string name="rwm_detail_etBemerkungen">Bemerkung ...</string>
    <string name="rwm_detail_lb_Bemerkung">Bemerkung</string>
    <string name="rwm_detail_lb_Austauschgrund">Austauschgrund</string>
    <string name="rwm_detail_spAustauschgrund">Bitte auswählen</string>
    <string name="rwm_detail_lb_NewNummer">neue Nummer</string>
    <string name="speichern">speichern</string>
    <string name="add_new">hinzufügeny</string>
    <string name="btOk">Ok</string>
    <string name="btCancel">Abbrechen</string>
    <string name="defekt">Defekt</string>
    <string name="neuerZaehler">neuer Zählermodel</string>
    <string name="neuer_funk_modul">neuer Funkmodul</string>
    <string name="neue_funknummer">neue Funknummer</string>
    <string name="upload">upload</string>
    <string name="austauschgrund">Austauschgrund</string>
    <string name="telefon">Telefon</string>
    <string name="neuerNutzer">neuer Nutzer</string>
    <string name="Datenaufnahme">Datenaufnahme</string>
    <string name="grundparameter">Grundparameter</string>
    <string name="Reihenanordnung">Reihenanordnung</string>
    <string name="WebesBauhöhe">BH - Bauhöhe</string>
    <string name="WebesNabenabstand">NA - Nabenabstand im mm</string>
    <string name="WebesBaulaenge">BL - Baulänge in mm</string>
    <string name="WebesBautiefe">BT - Bautiefe</string>
    <string name="WebesGliederbaulaenge">GL - Gliderbaulänge in mm</string>
    <string name="WebesNabendurchmesser">ND - Nabendurchmesser in mm</string>
    <string name="WebesSaeulenzahl">SZ - Säulenzahl</string>
    <string name="WebesSaeulendicke">SD - Säulendicke in mm</string>
    <string name="WebesGliederzahl">GZ - Gliederzahl</string>
    <string name="Startwert">Startwert</string>
    <string name="Procente">Procente</string>
    <string name="aktuell">aktuell</string>
    <string name="Stichtag">Stichtag</string>
    <string name="dateien_herunterladen">Dateien herunterladen</string>
    <string name="dateien_uload">Dateien absenden</string>
    <string name="bilder_upload">Bilder Hochladen</string>
</resources>
