<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dp_faktor_2">



    <TextView
        android:id="@+id/lbDescription"
        android:layout_width="@dimen/dp_faktor_80"
        android:layout_height="@dimen/dp_faktor_4"
        android:text="@string/rwm_detail_lb_nummer"
        android:textSize="@dimen/sp_faktor_05" />

    <EditText
        android:id="@+id/txtvDescription"
        android:layout_width="@dimen/dp_faktor_80"
        android:layout_height="@dimen/dp_faktor_10"
        android:layout_below="@id/lbDescription"
        android:ems="10"
        android:inputType="number"
        android:text="@string/empty"
        android:textSize="@dimen/sp_faktor_08" />

    <TextView
        android:id="@+id/lbNutzerLage"
        android:layout_width="@dimen/dp_faktor_80"
        android:layout_height="@dimen/dp_faktor_4"
        android:layout_below="@id/txtvDescription"
        android:text="@string/rwm_detail_lb_raum"
        android:textSize="@dimen/sp_faktor_05" />

    <AutoCompleteTextView
        android:id="@+id/txtvNutzerLage"
        android:layout_width="@dimen/dp_faktor_80"
        android:layout_height="@dimen/dp_faktor_10"
        android:layout_below="@id/lbNutzerLage"
        android:completionThreshold="1"
        android:ems="10"
        android:textSize="@dimen/sp_faktor_08" />

    <TextView
        android:id="@+id/lbTelefon"
        android:layout_width="@dimen/dp_faktor_80"
        android:layout_height="@dimen/dp_faktor_4"
        android:layout_below="@id/txtvNutzerLage"
        android:text="@string/telefon"
        android:textSize="@dimen/sp_faktor_05" />

    <EditText
        android:id="@+id/etTelefon"
        android:layout_width="@dimen/dp_faktor_80"
        android:layout_height="@dimen/dp_faktor_10"
        android:layout_below="@id/lbTelefon"
        android:ems="10"
        android:text="@string/empty"
        android:textSize="@dimen/sp_faktor_08" />


    <TextView
        android:id="@+id/lbNeuerNutzer"
        android:layout_width="@dimen/dp_faktor_80"
        android:layout_height="@dimen/dp_faktor_4"
        android:layout_below="@id/etTelefon"
        android:text="@string/neuerNutzer"
        android:textSize="@dimen/sp_faktor_05" />

    <EditText
        android:id="@+id/etNeuerNutzer"
        android:layout_width="@dimen/dp_faktor_80"
        android:layout_height="@dimen/dp_faktor_10"
        android:layout_below="@id/lbNeuerNutzer"
        android:gravity="start"
        android:textAlignment="gravity"
        android:ems="10"
        android:text="@string/empty"
        android:textSize="@dimen/sp_faktor_08" />

    <ImageView
        android:id="@+id/ivStatus"
        android:layout_width="@dimen/dp_faktor_14"
        android:layout_height="@dimen/dp_faktor_14"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:id="@+id/lbBemerkung"
        android:layout_width="@dimen/dp_faktor_70"
        android:layout_height="@dimen/dp_faktor_4"
        android:layout_below="@id/etNeuerNutzer"
        android:text="@string/rwm_detail_lb_Bemerkung"
        android:textSize="@dimen/sp_faktor_05" />

    <EditText
        android:id="@+id/etBemerkung"
        android:layout_width="@dimen/dp_faktor_70"
        android:layout_height="match_parent"
        android:layout_below="@id/lbBemerkung"
        android:gravity="start"
        android:hint="@string/rwm_detail_etBemerkungen"
        android:text="@string/austauschgrund"
        android:textAlignment="gravity"
        android:textSize="@dimen/sp_faktor_08" />
    <ImageView
        android:id="@+id/ivSpechToText"
        android:layout_width="@dimen/dp_faktor_14"
        android:layout_height="@dimen/dp_faktor_14"
        android:layout_below="@+id/lbBemerkung"
        android:layout_toRightOf="@id/etBemerkung"
        app:srcCompat="@drawable/icon_speaker" />

    <ImageView
        android:id="@+id/ivPhoto"
        android:layout_width="@dimen/dp_faktor_14"
        android:layout_height="@dimen/dp_faktor_14"
        android:layout_below="@+id/ivSpechToText"
        android:layout_toRightOf="@id/etBemerkung"
        app:srcCompat="@drawable/icon_camera" />

</RelativeLayout>