<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".MainActivity"
    tools:showIn="@layout/app_bar_main">

    <Button
        android:id="@+id/btCmdGetRoutes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/routen_oeffnen" />

    <Button
        android:id="@+id/btCmdDropbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btCmdGetRoutes"
        android:text="@string/datenaustausch_mit_dropbox" />

    <Button
        android:id="@+id/btCmdArchiviere"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btCmdDropbox"
        android:layout_marginTop="350dp"
        android:text="@string/dateien_archivieren" />

<!--    <TextView-->
<!--        android:id="@+id/tvWelcome"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="60dp"-->
<!--        android:foregroundGravity="center"-->
<!--        android:gravity="center"-->
<!--        android:text="Cos tam"-->
<!--        android:textAlignment="gravity"-->
<!--        android:textColor="?android:attr/colorSecondary" />-->
</RelativeLayout>